anchor image on camera

--- a/Percepta/Info.plist
+++ b/Percepta/Info.plist
@@ -6,5 +6,22 @@
 	<string>We need camera access to capture and analyze objects.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>We need microphone access for AR and video features.</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>10.25.19.251</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<false/>
+				<key>NSTemporaryExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSTemporaryExceptionMinimumTLSVersion</key>
+				<string>TLSv1.2</string>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
